[gd_scene load_steps=2 format=3 uid="uid://c6sf465qqmi5k"]

[ext_resource type="Script" uid="uid://dy2lp3fyfrphl" path="res://scripts/SettingsMenu.gd" id="1_s7x2k"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7x2k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚öôÔ∏è Configuraci√≥n"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="LanguageContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LanguageLabel" type="Label" parent="VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "üåç Idioma:"
vertical_alignment = 1

[node name="LanguageOption" type="OptionButton" parent="VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîä Volumen Principal"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üéµ Volumen M√∫sica"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SfxVolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîî Volumen Efectos"

[node name="SfxVolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚¨ÖÔ∏è Atr√°s"
